# kafka-definitive-guide-study

./: README.md  pyproject.toml
Chapter14_Streams/: README.md
Chapter3_Producer/: README.md
Chapter4_Consumer/: README.md
Chapter6_Kafka_Internal_Mechanism/: README.md
Chapter7_Reliable_Data_Delivery/: README.md
Chapter8_Exactly_Once_Semantics/: README.md
examples/: synchronouse_send_vs_asynchronouse_send.py  utils.py
examples/avro/: users.avsc
